web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-generator-array-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,18)
1|function *g([]){ "use strict"; }
 |                ^
